Connection Schema added

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGO_URL = "mongodb+srv://aithaniyogesh:Yogesh009@cluster0.wlzh3ka.mongodb.net/devTinder"
-SECERT_KEY = "DEV_TINDER"
+SECRET_KEY = "DEV_TINDER"
